# Belote

./: CMakeLists.txt  main.cpp
include/: Belote.h  Carte.h  EllipseButton.h  Equipe.h  Functions.h  Joueur.h  Paquet_cartes.h  RectButton.h  Table.h  button.h  menu.h  talba.h
src/: Belote.cpp  Button.cpp  Carte.cpp  EllipseButton.cpp  Equipe.cpp  Functions.cpp  Joueur.cpp  Paquet_cartes.cpp  RectButton.cpp  Table.cpp  cards.txt  main.cpp  menu.cpp
